@@ -1,3 +1,15 @@
+2010-01-15  Lin Ma  <Lin.Ma@Sun.COM>
+
+	* capplet/nwam_profile_panel.c
+	(nwam_profile_panel_set_toggled_row), (cancel), (apply),
+	(nwam_object_activate_toggled_cb),
+	(nwam_treeview_update_widget_cb),
+	(nwam_object_toggled_cell_sensitive_func):
+	Fixed active a dup object which isn't created crashes.
+	* common/nwamui_daemon.c (nwamd_event_handler):
+	* common/nwamui_ncu.c:
+	Clean code.
+
 2010-01-14  Lin Ma  <Lin.Ma@Sun.COM>
 
 	* capplet/nwam_profile_panel.c (nwam_pref_init),
